BigOcoding/day14/compiling_error.txt
/Users/nguyentandung/Desktop/execirses programming/C++ programming/BigOcoding/day14/lab1_problem4.cpp:10:35: error: expected ')'
void aa(struct FastFood (*&array1){
                                  ^
/Users/nguyentandung/Desktop/execirses programming/C++ programming/BigOcoding/day14/lab1_problem4.cpp:10:8: note: to match this '('
void aa(struct FastFood (*&array1){
       ^
/Users/nguyentandung/Desktop/execirses programming/C++ programming/BigOcoding/day14/lab1_problem4.cpp:23:2: error: expected function body after function declarator
}
 ^
2 errors generated.
